# simple-socket

./: .gitignore  AUTHORS  CANFrame.cpp  CANFrame.h  CANRawSocket.cpp  CANRawSocket.h  CANSocket.cpp  CANSocket.h  CMakeLists.txt  Doxyfile  Handle.h  InternetSocket.cpp  InternetSocket.h  LICENSE  NEWS  SCTPSocket.cpp  SCTPSocket.h  SimpleSocket.cpp  SimpleSocket.h  SocketHandle.h  SocketUtils.cpp  SocketUtils.h  TCPSocket.cpp  TCPSocket.h  TODO  TempFailure.h  UDPSocket.cpp  UDPSocket.h  UDPSocket_TEST.cpp  UnixDatagramSocket.cpp  UnixDatagramSocket.h  UnixSocket.cpp  UnixSocket.h  flags.cmake  index.html
doc/: Doxyfile.in  examples.dox  mainpage.dox
doxygen/dox/html/: a00001.html  a00002.html  a00005.html  a00009.html  a00011.html  a00014_source.html  a00017.html  a00017_source.html  a00018_source.html  a00019.html  a00020.html  a00020_source.html  a00021.html  a00022.html  a00022_source.html  a00023_source.html  a00025.html  a00025_source.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00030_source.html  a00032.html  a00032_source.html  a00033_source.html  a00034_source.html  a00037.html  a00041.map  a00041.md5  a00043.map  a00043.md5  a00045.md5  a00047.map  a00048.md5  a00049.map  a00049.md5  a00051.md5  a00052.map  (+42 more)
doxygen/html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00010_source.html  a00011.html  a00011_source.html  a00012.html  a00012_source.html  a00013.html  a00013_source.html  a00014.html  a00014_source.html  a00015.html  a00015_source.html  a00016.html  a00016_source.html  a00017.html  a00017_source.html  a00018.html  a00018_source.html  a00019.html  a00019_source.html  a00020.html  a00020_source.html  a00021.html  a00021_source.html  a00022.html  a00022_source.html  a00023.html  a00023_source.html  a00024.html  a00024_source.html  a00025.html  (+164 more)
examples/: CMakeLists.txt  TCP_Client.cpp  TCP_Server.cpp  UDP_Multicast.cpp  mini_ifconfig.cpp
tests/: CANSocket_TEST.cpp  CMakeLists.txt  SocketUtils_TEST.cpp  TCPSocket_TEST.cpp  UDPSocket_TEST.cpp  UnixDatagramSocket_TEST.cpp  test_runner.cpp
